compiler/src/test/resources/amyc/parser/failing/WrongQName3.amy
object WrongQName
  case class Foo() : Baz.bar
end WrongQName
